--- a/src/Screen/LandingScreen.css
+++ b/src/Screen/LandingScreen.css
@@ -3,10 +3,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1rem;
-    padding: 1rem;
+    gap: 2rem;
+    padding: 3rem;
     margin-top: 4rem;
-    border-bottom: 1px solid rgb(142, 83, 6);
+    border-bottom: 1px solid black;
     font-size: large;
     font-weight: lighter;
 }
@@ -32,8 +32,7 @@ button{
     padding: 0.4rem 1rem;
     border-radius: 0.625rem;
     color: #ffffff;
-    background-color: #303044;
+    background-color: #0000ff;
     border: none;
     cursor: pointer;
-    font-size:larger ;
 }
